added splash screen for web

--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,13 @@
 
   <title>mighty_marks_kids</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- from https://gpalma.pt/blog/flutter-web-splash-screen/ -->
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <!-- from https://gpalma.pt/blog/flutter-web-splash-screen/ -->
+  <img src="img/splash-screen-pub.svg" class="center" />
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
